<resources>
    <string name="app_name">Zalgo</string>
    <string name="edit_text_hint">Text to zalgoify</string>
    <string name="preview_text">Preview: %1$s</string>
    <string name="intensity_slider_text">Intensity:</string>
    <string name="up_checkbox">add upwards</string>
    <string name="mid_checkbox">add in the middle</string>
    <string name="down_checkbox">add downwards</string>
    <string name="confirm_button">HE COMES</string>

    <string name="ztg_apache_2">Copyright 2012 Tomauty (tomauty@gmail.com)\n\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n\n
        \thttp://www.apache.org/licenses/LICENSE-2.0
\n\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
    <string name="zalgotextgenerator_mention">Tomauty\'s ZalgoTextGenerator</string>

    <string name="androidassetstudio_mention">Android Asset Studio (iconography)</string>
    <string name="aas_cc_by_3">
This work is licensed under the Creative Commons Attribution 3.0 Unported License.
To view a copy of this license, visit
\n\n
    \thttp://creativecommons.org/licenses/by/3.0/
\n\n
or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
    </string>
</resources>
